# GitMCTS

./: README.md
gitmcts/: pyproject.toml
gitmcts/src/gitmcts/: __init__.py  chains.py  cli.py  gate.py  mcts_node.py  oracle.py  ui.py  vfs.py
